# MOCCA

./: .gitignore
01_cudaCC/: CMakeLists.txt  cudaCC_div.cu
02_cudaPerm/: CHANGELOG.md  CMakeLists.txt  README.md  generatePermutations.py  permutationTest_cuda.cu  validate_pvalues.sh
02_cudaPerm/generateTestData/: generateTestData.ipynb
03_prepResultsForVisualization/: README.md  find_pvalue_threshold.py  permout_to_csv.py  quick_threshold_count.sh  split_pos_neg_tstat.py
04_coffee-dac/: README.md  README_coffee-dac.md  brain3mm.stl  brain3mm_gm.stl  brain3mm_outer.stl  brain3mm_wm.stl  coffee_dac_pipeline.py  coffee_dac_pipeline_v2.py  generate_gm_stl.py  launch_gui.py  notes.txt  requirements.txt  run_pipeline.py  run_pipeline_v2.py
04_coffee-dac/mocca_gui/: colormap.py  data_loader.py  dendrogram_plotter.py  fine_tuner.py  gif_exporter.py  main_window.py  plot_worker.py  plotter.py  tree_manager.py
pipeline/: process_all_images.sh  run_cudaCC_div.sh  run_permutationTest.sh
